--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+body {
+    font-family: 'Archivo';
 }
 
 header {
