--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@ header {
     align-items: center;
     gap: 0.25rem;
 }
+.sign-in-btn {
+    background-color: #4c5fd5;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 2px;
+    border: none;
+    font-weight: bold;
+}
+
 h1 {
     font-size: 1.5rem;
 }
