--- a/src/styles.css
+++ b/src/styles.css
@@ -89,9 +89,10 @@ a {
 footer {
     background-color: black;
     color: #fff;
-    padding: 1rem;
+    padding: 2rem 0;
     display: flex;
     justify-content: space-around;
+    min-height: 30vh;
 }
 .footer-nav {
     display: flex;
