--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,8 @@ h1 {
 }
 
 .hero {
-    background-color: #dadbf1;
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(218,219,241,1) 100%);
     height: 30vh;
     display: flex;
     flex-direction: column;
